force-app/main/default/objects/Eligibility__c/Eligibility__c.object-meta.xml
<CustomObject>
    <label>Eligibility</label>
    <nameField>
        <displayFormat>E-{0}</displayFormat>
        <label>Eligibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>