force-app/main/default/objects/Eligibility__c/fields/Eligibility_start_date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_start_date__c</fullName>
    <label>Eligibility start date</label>
    <type>Date</type>
</CustomField>