force-app/main/default/objects/Eligibility__c/fields/Eligibility_type__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_type__c</fullName>
    <label>Eligibility type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>צמיתה</fullName>
            </value>
            <value>
                <fullName>זמני</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>