force-app/main/default/objects/Eligibility__c/fields/Injury_Type__c.field-meta.xml
<CustomField>
    <fullName>Injury_Type__c</fullName>
    <label>Injury Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Emotional</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>