force-app/main/default/objects/Eligibility__c/fields/opp_stage__c.field-meta.xml
<CustomField>
    <fullName>opp_stage__c</fullName>
    <formula>text( Opportunity__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>opp stage</label>
    <type>Text</type>
</CustomField>