force-app/main/default/objects/Eligibility__c/fields/Recognized_general_disability__c.field-meta.xml
<CustomField>
    <fullName>Recognized_general_disability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recognized (general disability)</label>
    <type>Checkbox</type>
</CustomField>