force-app/main/default/objects/Eligibility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Percentage_of_hostility_disability__c</columns>
    <columns>Recognized_by_Bituach_Leumi__c</columns>
    <columns>Injury_Type__c</columns>
    <columns>Eligibility_type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>